Safari365 Prod/src/objects/OPD__c.object
<CustomObject>
    <fields>
        <fullName>ADD_ADULT1__c</fullName>
        <label>ADD ADULT1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGE_CATEGORY__c</fullName>
        <label>AGE CATEGORY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EX1__c</fullName>
        <label>EX1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EX2__c</fullName>
        <label>EX2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EX3__c</fullName>
        <label>EX3</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPD_ID__c</fullName>
        <externalId>true</externalId>
        <label>OPD ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSR_ID__c</fullName>
        <label>OSR ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSR_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OSR</label>
        <referenceTo>OSR__c</referenceTo>
        <relationshipLabel>OPDs</relationshipLabel>
        <relationshipName>OPDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAX_AGE_MAX__c</fullName>
        <label>PAX_AGE_MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAX_AGE_MIN__c</fullName>
        <label>PAX_AGE_MIN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRICE_PXB1__c</fullName>
        <label>PRICE PXB1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRICE_PXB2__c</fullName>
        <label>PRICE PXB2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRICE_PXB3__c</fullName>
        <label>PRICE PXB3</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QR__c</fullName>
        <label>QR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RATE_CATEGORY__c</fullName>
        <label>RATE CATEGORY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RATE_TYPE__c</fullName>
        <label>RATE TYPE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SS__c</fullName>
        <label>SS</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STD_EXT__c</fullName>
        <label>STD EXT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR__c</fullName>
        <label>TR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW__c</fullName>
        <label>TW</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>OPD</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OSR_Lookup__c</columns>
        <columns>OPD_ID__c</columns>
        <columns>OSR_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>OSR_Not_linked</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>OPD_ID__c</columns>
        <columns>ADD_ADULT1__c</columns>
        <columns>RATE_TYPE__c</columns>
        <columns>OSR_ID__c</columns>
        <columns>OSR_Lookup__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>PRICE_PXB1__c</columns>
        <columns>PRICE_PXB2__c</columns>
        <columns>PRICE_PXB3__c</columns>
        <columns>PRICE_PXB4__c</columns>
        <columns>EX1__c</columns>
        <columns>SS__c</columns>
        <columns>TW__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OSR_Lookup__c</field>
            <operation>equals</operation>
        </filters>
        <label>OSR Not linked</label>
    </listViews>
    <nameField>
        <displayFormat>OPD-{00000000}</displayFormat>
        <label>OPD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OPDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>